--- a/index.html/styles.css
+++ b/index.html/styles.css
@@ -17,12 +17,53 @@
       width: 375px;
       height: 568px;
     padding:20px;
+    border-radius: 20px;
+    display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4,1fr)
+    grid-template-rows: repeat(7,1fr)
       
   }
 
-  inpout{
+  input{
     font-size: 48px;
+    color: white;
     background-color: #17181A;
+    border: none;
+    margin: 7px;
+    border-radius: 15px;
+    grid-row: 1/3;
+    grid-column: 1/5;
+
+  }
+
+  button {
+    font-size: 24px;
+    border: none;
+    margin: 7px;
+    border-radius: 15px;
+    cursor: pointer;
+    color: white;
+
+  }
+
+   button:hover{
+    opacity: 0.7;
+   }
+
+  .black-button {
+    background-color: #212529;
+  }
+
+  .gray-button {
+    background-color:#6C757D ;
+
+  }
+
+  .blue-button {
+    background-color: #023E8A;
+  }
+
+  .equal {
+    background-color: #0077B6;
+
   }
